--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 html{
     font-size: 10px;
     color: gray;
+    font-family: 'Lato', sans-serif;
 }
 
 main{
@@ -53,6 +54,7 @@ input[type="number"]{
     border-radius: 0.5rem;
     padding: 0.8rem 0 0.8rem 0.8rem;
     box-shadow: inset 0 2px 2px lightgray;
+    font-family: inherit;
 }
 
 .space-between{
@@ -63,4 +65,23 @@ input[type="number"]{
 .total{
     font-size: 2rem;
     font-weight: bolder;
+}
+
+.range{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 8px;
+    background: #eee;
+    margin-top: 1.2rem;
+    border-radius: 0.3rem;
+    outline-color: #227C9D;
+}
+
+.range::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    background-color: #227C9D;
+    cursor: pointer;
 }
